# c-neural-network

./: .gitignore  CMakeLists.txt  README.md  Session.vim
includes/: activation-function.h  linear-algebra.h  neural-network.h  term_colors.h
src/: activation-function.c  linear-algebra.c  neural-network.c  simple.c
